force-app/main/default/objects/BusinessLicense/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LLQP</fullName>
            </value>
            <value>
                <fullName>MFDA</fullName>
            </value>
            <value>
                <fullName>IIROC</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>