force-app/main/default/objects/BusinessLicense/fields/Licenses_Type__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Type__c</fullName>
    <label>Licenses Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LLQP</fullName>
            </value>
            <value>
                <fullName>MFDA</fullName>
            </value>
            <value>
                <fullName>IIROC</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>