force-app/main/default/objects/BusinessLicense/fields/Newly_License_Check__c.field-meta.xml
<CustomField>
    <fullName>Newly_License_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newly License Check</label>
    <type>Checkbox</type>
</CustomField>