force-app/main/default/objects/BusinessLicense/fields/Percentage_Of_Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of_Total_Income__c</fullName>
    <label>Percentage Of Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>