force-app/main/default/objects/BusinessLicense/fields/Provincial_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Provincial_Jurisdiction__c</fullName>
    <label>Provincial Jurisdiction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
            </value>
            <value>
                <fullName>Newfoundland and Labrador</fullName>
            </value>
            <value>
                <fullName>Northwest Territories</fullName>
            </value>
            <value>
                <fullName>Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Nunavut</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Prince Edward Island</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Yukon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>