force-app/main/default/objects/BusinessLicense/fields/Total_Annual_Earning__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Earning__c</fullName>
    <label>Total Annual Earning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>