force-app/main/default/objects/BusinessLicense/recordTypes/Corporation_Licenses.recordType-meta.xml
<RecordType>
    <fullName>Corporation_Licenses</fullName>
    <active>true</active>
    <description>Type of Financial Advisors exists within that program</description>
    <label>Corporation Licenses</label>
</RecordType>