force-app/main/default/objects/BusinessLicense/recordTypes/Individual_License.recordType-meta.xml
<RecordType>
    <fullName>Individual_License</fullName>
    <active>true</active>
    <description>licenses are held by an advisor</description>
    <label>Individual License</label>
</RecordType>